--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </style>
 </head>
 <body>
-
+<h1>Prepared and developed by: Mr M Kapikanya.</h1>
 <div class="container">
   <div id="quiz-container"></div>
   <button onclick="submitQuiz()">Submit Quiz</button>
